Update first section

--- a/citations.bib
+++ b/citations.bib
@@ -30,3 +30,9 @@
   year={1996},
   institution={DTIC Document}
 }
+@book{flesch1949art,
+  title={The art of readable writing},
+  author={Flesch, Rudolf and Gould, Alan J},
+  year={1949},
+  publisher={Harper New York}
+}
