Add more citations. Improve discussion and results

--- a/citations.bib
+++ b/citations.bib
@@ -36,3 +36,19 @@
   year={1949},
   publisher={Harper New York}
 }
+@online{gruber,
+  url = {http://daringfireball.net/projects/markdown/syntax},
+  title = {Markdown: Syntax},
+  year = 2004,
+  note = {Accessed: 2014-09-23}
+}
+@article{porter1980algorithm,
+  title={An algorithm for suffix stripping},
+  author={Porter, Martin F},
+  journal={Program: electronic library and information systems},
+  volume={14},
+  number={3},
+  pages={130--137},
+  year={1980},
+  publisher={MCB UP Ltd}
+}
