--- a/report.tex
+++ b/report.tex
@@ -108,7 +108,7 @@ To validate our results we performed 10-fold cross validation on our classifier 
   \caption{ Binary classification performance as a function of the amount of data. There were a total of 35000 and 45000 comments in the two subreddits sports and books respectively. The performance was measure by 10-fold cross validation on the test data. The error bars represent the standard error of the 10 samples collected in the cross validation.}
   	\label{multiclass}
     \end{figure}
-We measured good classification performance, attaining approximately $80\%$ performance (Fig \ref{multiclass}) when looking at the binary classification of two groups. As the amount of classes increased, the performance dropped but stayed well above that of a random classifier (Fig \ref{classes}). Most importantly, by using a single classifier we avoided biasing the results towards any one class, resulting in a fairly uniform confusion matrix (Fig \ref{confusion}). The amount of data in each class varied a lot but from this matrix we can see that there is no one class that was significantly more fitted than the others. 
+We measured good classification performance, attaining approximately $80\%$ (Fig \ref{multiclass}) in binary classification. As the amount of classes increased, the performance dropped but stayed well above that of a random classifier (Fig \ref{classes}). Most importantly, by using a single classifier we avoided biasing the results towards any one class, resulting in a fairly uniform confusion matrix (Fig \ref{confusion}). While the amount of data in each class varied a lot but from the confusion matrix it is clear that there is no class that has been significantly over-fitted.
 
 
 \begin{figure}
@@ -133,9 +133,9 @@ We measured good classification performance, attaining approximately $80\%$ perf
 \end{figure}	
 
 \section{Discussion}
-The final dataset and features are accurate when classifying but could still be improved. There were several issues during tokenization where standard approaches would fail due to Reddit's internal culture. The frequent use of non-textual unicode characters to encode emojis and other information wouldn't be captured by pure word tokenization. Additionally, the presence of Markdown for text formatting adds another level of complexity to the word extraction. We settled on stripping markdown formatting through regexes before splitting on spaces and stemming words. However, there a few issues with things such as `l33tspeak' where numbers are subsistuted for letters, causing use to not recognize identical words. 
+The final dataset and features are accurate when classifying but could still be improved. There were several issues during tokenization where standard approaches would fail due to Reddit's internal culture. The frequent use of non-textual unicode characters to encode emojis and other information wouldn't be captured by pure word tokenization. Additionally, the presence of Markdown\cite{gruber} for text formatting adds another level of complexity to the word extraction. We settled on stripping markdown formatting through Regular Expressions before splitting on spaces and stemming\cite{porter1980algorithm} words. However, there a few issues with things such as `l33tspeak' where numbers are subsistuted for letters, causing the stemmer to not recognize identical words. 
 
-Overall our results were quite positive. On possible use of our classifier would be to recommend new subreddits to users based on their comment history. Each user's comments are publicly available on their profile so it would be very easy to classify each of the comments into a given subreddit. If a user's comments where consistently classified into a small subset of subreddits it is possble that they may be interested in that subreddit. On a larger scale, sometimes posts are added to the wrong subreddit, this classifier could detect that comments really belong in a different subreddit and automatically move the entire post to that subreddit where it could receive the appropriate community interaction.
+Overall our results were quite positive. A possible use of our classifier would be to recommend new subreddits to users based on their comment history. Each user's comments are publicly available on their profile so it would be very easy to classify each of the comments into a given subreddit. If a user's comments where consistently classified into a small subset of subreddits it is possble that they may be interested in that subreddit. On a larger scale, sometimes posts are added to the wrong subreddit, this classifier could detect that comments really belong in a different subreddit and automatically move the entire post to that subreddit where it could receive the appropriate community interaction.
 
 We hereby state that all the work presented in the report is that of the authors.
 
