Center table and add appendix

--- a/report.tex
+++ b/report.tex
@@ -53,6 +53,7 @@ However, we did find an interesting analysis that aimed to predict the popularit
 Our classification problem also has a stark resemblance to the 20 news groups problem of \cite{joachims1996probabilistic}. This paper is the original 20 news groups paper and compares the performance of various classification algorithms. The paper presents a Text Frequency - Inverse Document Frequency (TF-IDF) algorithm as well a probabilistic variation on this algorithm. The authors compared the performance of these two algorithms, along with a naive Bayes classifier, to gauge their relative performance. In the end the performance of the algorithms was as follows.
 \\
 
+\begin{center}
 \begin{tabular}{|c|c|}
 \hline
 Probabilistic TF-IDF & 90.3 \\
@@ -60,6 +61,7 @@ Naive Bayes & 88.6 \\
 TD-IDF & 82.3 \\
 \hline
 \end{tabular}
+\end{center}
 
 \section{Dataset Description}
 
@@ -149,8 +151,9 @@ Overall our results were quite positive. A possible use of our classifier would 
 
 We hereby state that all the work presented in the report is that of the authors.
 
-\section{References}
 \printbibliography
 \section{Appendix}
-
+\begin {enumerate}
+\item \url{https://github.com/xldenis/proj1} - The complete project repository including data dictionary
+\end{enumerate}
 \end{document}
