Add hastie citation

--- a/citations.bib
+++ b/citations.bib
@@ -52,3 +52,11 @@
   year={1980},
   publisher={MCB UP Ltd}
 }
+@book{hastie2009elements,
+  title={The elements of statistical learning},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome and Hastie, T and Friedman, J and Tibshirani, R},
+  volume={2},
+  number={1},
+  year={2009},
+  publisher={Springer}
+}
